# kaos

./: .gitignore  Cargo.toml  README.md  eminem.txt  explanation.txt  finances-self-improve.rebis  kanye.rebis  sisyphus-agi.rebis  twentyonepilots.rebis
bench/: swe-edge.myth
docs/: EDGE.md  OPERATIONS.md  REBIS.md  REBIS_CHAT_CONTEXT.md  SISYPHUS.md  SPIRAL.md  myth.md  twin-ladders.html
examples/: jayz-vs-kanye-verdict.rebis  jayz-vs-kanye.rebis
kaos-agent/: Cargo.toml
kaos-agent/src/: agent.rs  auth.rs  backend.rs  conductor.rs  familiar.rs  hand.rs  lib.rs  pause.rs  provider.rs  scry.rs  solve.rs  spiral.rs
kaos-core/: Cargo.toml
kaos-core/src/: config.rs  lib.rs  run_model.rs  runs.rs  sessions.rs  sigils.rs  tabs.rs  theme.rs  visual.rs
kaos-pact/: Cargo.toml
kaos-pact/src/: equation.rs  gnosis.rs  lib.rs  order.rs  ray.rs  rite.rs  sigil.rs
kaos-visual/: Cargo.toml
kaos-visual/src/: actions.rs  lib.rs  main.rs  process.rs  runs.rs  settings.rs  theme.rs
kaos-workspace/: Cargo.toml
kaos-workspace/src/: lib.rs  rebis_checkpoint.rs  rebis_inlet.rs  rebis_supervisor.rs  rebis_workspace.rs
sisyphus/: ARCHITECTURE.md  CONFIRMATION.md  PAPER.md  PROTOCOL.md  README.md  __init__.py  __main__.py  benchmark_complex_path.py  benchmark_lm.py  benchmark_scaling.py  compiler.py  complex_path.py  data.py  improve.py  layers.py  models.py  music_sidecar.py  requirements.txt  summarize.py  summarize_complex_path.py  summarize_scaling.py  synthetic_data.py  test_cli.py  test_complex_path.py  test_models.py  test_music_sidecar.py  test_results.py  zigcc
sisyphus/music/: __init__.py  adapter.py  events.py  feedback.py  midi.py  sidecar_model.py  synth.py  target.py  teacher.py
sisyphus/results/: README.md
sisyphus/results/complex_path_pilot_v1/: complex.seed_17.steps_150.ctx_128.json  complex.seed_29.steps_150.ctx_128.json  complex.seed_43.steps_150.ctx_128.json  nonrecursive.seed_17.steps_150.ctx_128.json  nonrecursive.seed_29.steps_150.ctx_128.json  nonrecursive.seed_43.steps_150.ctx_128.json  phase-destroyed.seed_17.steps_150.ctx_128.json  phase-destroyed.seed_29.steps_150.ctx_128.json  phase-destroyed.seed_43.steps_150.ctx_128.json  real.seed_17.steps_150.ctx_128.json  real.seed_29.steps_150.ctx_128.json  real.seed_43.steps_150.ctx_128.json
sisyphus/results/enwik8_v1/: checkpoints.sha256  sisyphus.seed_113.steps_500.ctx_128.json  sisyphus.seed_113.steps_500.ctx_128.safetensors  sisyphus.seed_17.steps_500.ctx_128.json  sisyphus.seed_17.steps_500.ctx_128.safetensors  sisyphus.seed_29.steps_500.ctx_128.json  sisyphus.seed_29.steps_500.ctx_128.safetensors  sisyphus.seed_43.steps_500.ctx_128.json  sisyphus.seed_43.steps_500.ctx_128.safetensors  sisyphus.seed_71.steps_500.ctx_128.json  sisyphus.seed_71.steps_500.ctx_128.safetensors  summary.json  transformer.seed_113.steps_500.ctx_128.json  transformer.seed_113.steps_500.ctx_128.safetensors  transformer.seed_17.steps_500.ctx_128.json  transformer.seed_17.steps_500.ctx_128.safetensors  transformer.seed_29.steps_500.ctx_128.json  transformer.seed_29.steps_500.ctx_128.safetensors  transformer.seed_43.steps_500.ctx_128.json  transformer.seed_43.steps_500.ctx_128.safetensors  transformer.seed_71.steps_500.ctx_128.json  transformer.seed_71.steps_500.ctx_128.safetensors
sisyphus/results/music_sidecar_cycle_v1/: composition.unconditioned.mid  cycle_record.json  main_model_reference.safetensors  teacher_export.json
sisyphus/results/scaling_v1/: sisyphus.ctx_1024.json  sisyphus.ctx_128.json  sisyphus.ctx_2048.json  sisyphus.ctx_32.json  sisyphus.ctx_4096.json  sisyphus.ctx_512.json  summary.json  transformer.ctx_1024.json  transformer.ctx_128.json  transformer.ctx_2048.json  transformer.ctx_32.json  transformer.ctx_4096.json  transformer.ctx_512.json
sisyphus/results/text8_v1/: checkpoints.sha256  sisyphus.seed_127.steps_500.ctx_128.json  sisyphus.seed_127.steps_500.ctx_128.safetensors  sisyphus.seed_19.steps_500.ctx_128.json  sisyphus.seed_19.steps_500.ctx_128.safetensors  sisyphus.seed_31.steps_500.ctx_128.json  sisyphus.seed_31.steps_500.ctx_128.safetensors  sisyphus.seed_47.steps_500.ctx_128.json  sisyphus.seed_47.steps_500.ctx_128.safetensors  sisyphus.seed_73.steps_500.ctx_128.json  sisyphus.seed_73.steps_500.ctx_128.safetensors  summary.json  transformer.seed_127.steps_500.ctx_128.json  transformer.seed_127.steps_500.ctx_128.safetensors  transformer.seed_19.steps_500.ctx_128.json  transformer.seed_19.steps_500.ctx_128.safetensors  transformer.seed_31.steps_500.ctx_128.json  transformer.seed_31.steps_500.ctx_128.safetensors  transformer.seed_47.steps_500.ctx_128.json  transformer.seed_47.steps_500.ctx_128.safetensors  transformer.seed_73.steps_500.ctx_128.json  transformer.seed_73.steps_500.ctx_128.safetensors
src/: adept.rs  agent.rs  backend.rs  charge.rs  conductor.rs  config.rs  dream.rs  egregore.rs  equation.rs  familiar.rs  fold.rs  grade.rs  hand.rs  input.rs  lib.rs  main.rs  myth.rs  pause.rs  ray.rs  rebis_workspace.rs  rng.rs  scry.rs  sessions.rs  solve.rs  spiral.rs  theme.rs  tui.rs  visual.rs  visual_ui.rs  working.rs
