[package]
name = "kaos"
version = "0.0.1"
edition = "2021"
description = "An agent orchestrator dressed as a chaos-magick secret society: sigils as prompt engineering, Carroll's equation of magic as the objective."
license = "GPL-3.0-or-later"

# The core — sigil engine, the Pact, the orchestrator, the benchmarks, the agent
# loop — is std-only and builds offline and deterministically. All dependencies
# sit behind the default `tui` and `api` features, so
# `cargo build --no-default-features` restores a std-only binary (plain line REPL,
# shell-out backends only). The magick stays in the policy.
# Kaos is its own workspace root, independent of any sibling package. The
# members are the app (here) and `kaos-core`, which holds everything that does
# not need a terminal or a window — see that crate's docs for the split.
[workspace]
members = ["kaos-agent", "kaos-core", "kaos-pact", "kaos-visual", "kaos-workspace"]

[dependencies]
# The fullscreen TUI. ratatui draws it, crossterm is the terminal backend, and
# ansi-to-tui renders the themed ANSI that command subprocesses emit into styled
# ratatui text. Behind the default `tui` feature — `--no-default-features` builds a
# std-only binary that uses the plain line REPL (for pipes/CI).
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
ansi-to-tui = { version = "7", optional = true }
base64 = { version = "0.22", optional = true }
# Native text clipboard ownership for pane-local selections. OSC-52 remains as
# a fallback for remote terminals, but VTE/GNOME may ignore it and may consume
# Ctrl-Shift-C before the application receives the key.
arboard = { version = "3.6", default-features = false, optional = true }
# Rebis is the model-interface language.  KAOS is a host of the language; the
# dependency is deliberately one-way (rebis-lang has no knowledge of KAOS).
rebis-lang = { git = "https://github.com/fmzbl/rebis.git" }
# The shared, front-end-agnostic core: config, palette, sessions, mandala model.
kaos-core = { path = "kaos-core" }
# The offline, deterministic simulation core.
kaos-pact = { path = "kaos-pact" }
# The agent runtime: providers, backends, the conductor.
kaos-agent = { path = "kaos-agent" }
# The Rebis workspace: editor state with no interface of its own.
kaos-workspace = { path = "kaos-workspace" }
# HTTP providers (OpenAI + Anthropic APIs). ureq is blocking with pure-rust TLS in
# one crate; serde_json builds/parses the request+response bodies. Behind `api`.
ureq = { version = "2", features = ["json", "tls"], optional = true }
serde_json = { version = "1", optional = true }
# The `kaos visual` mandala editor. egui draws the whiteboard natively on
# OpenGL — no webview, and so no system webkit. The editor is a thin shell over
# `visual::Mandala`, which stays std-only and testable without any of this.
# Behind the non-default `visual` feature so the ordinary build keeps its
# current dependency set.
# The visual editor is its own crate: it draws the shared core and knows
# nothing of the terminal app.
kaos-visual = { path = "kaos-visual", optional = true }

[features]
default = ["tui", "api"]
# `tui`: the fullscreen ratatui app. Off ⇒ the plain std-only line REPL.
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:ansi-to-tui",
    "dep:base64",
    "dep:arboard",
    # The input-history file stores one JSON string per line, so an entry
    # containing a newline survives a round trip.
    "dep:serde_json",
]
# `api`: OpenAI + Anthropic HTTP providers (API keys). Off ⇒ only the local `claude`
# CLI and `ollama` are available (both shell out, no HTTP crate).
api = ["dep:ureq", "dep:serde_json", "kaos-agent/api"]
# `visual`: the `kaos visual` mandala editor (egui, native OpenGL). Non-default
# only to keep the ordinary build small — the `visual` module's model and Rebis
# codegen build and test without it.
visual = ["dep:kaos-visual"]

[[bin]]
name = "kaos"
path = "src/main.rs"

[lib]
name = "kaos"
path = "src/lib.rs"

[profile.release]
opt-level = 3
