[package]
name = "kaos-visual"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "The Kaos visual editor: a native egui window over the shared Kaos core."

[lib]
name = "kaos_visual"
path = "src/lib.rs"

# The editor stands alone: this binary is the whole application, and it links
# nothing from the terminal app.
[[bin]]
name = "kaos-visual"
path = "src/main.rs"

[dependencies]
# Shared meaning comes from the core; screen-neutral source/block behavior from
# the workspace; credentials and model rites from the agent. No ratatui
# frontend is linked, so this remains a standalone native application.
kaos-core = { path = "../kaos-core" }
kaos-agent = { path = "../kaos-agent" }
kaos-workspace = { path = "../kaos-workspace" }
rebis-lang = { path = "../../rebis" }
eframe = { version = "0.29", default-features = false, features = [
    "glow",
    "default_fonts",
] }

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "wayland",
    "x11",
] }
